--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 :root {
     --main-color: #033a80;
-    --bg-color: #0f0a0a;
+    --bg-color: #fffcfc;
     --text-color: #0f0c27;
     --hover: hsl(260, 100%, 51%);
     --big-font: 3.2rem;
